Fixing word-wrap bugs and HTML clean-up

--- a/mysite/static/css/stylesheet.css
+++ b/mysite/static/css/stylesheet.css
@@ -567,6 +567,9 @@ li .fa-heart {
 }
 
 #hero-bg {
+  background-size: cover;
+  background-position: bottom center;
+  min-height: 500px;
   -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
   filter: grayscale(100%);
 }
@@ -575,6 +578,7 @@ li .fa-heart {
   color: #d17580;
   font-family: 'Passion One', cursive;
   font-size: 11.0em;
+  overflow-wrap: break-word;
   text-transform: uppercase;
   text-shadow:
           -25px -25px 0 #000,
@@ -960,6 +964,10 @@ li .fa-heart {
   color: #3d3d3d;
 }
 
+.blog-index-meta {
+  font-size: 1.2em;
+}
+
 .sticky-sidebar {
   position: fixed;
   height: 100%;
@@ -1034,6 +1042,10 @@ li .fa-heart {
 .img-column {
   max-width: 100%;
   height: auto;
+}
+
+.rich-text {
+  overflow-wrap: break-word;
 }
 
 .rich-text img {
